--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,9 +1,19 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
-      Tab Two
+      Finished
     </ion-title>
+    <img src="../../assets/images/completados.jpg"/>
+
   </ion-toolbar>
+
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content padding>
+  <ion-list>
+    <ion-item *ngFor="let list of lists | filterFinished:true">
+      <ion-label  (click)="openList(list)">
+        {{list.title}}</ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content>
